--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title>Ohmyfood</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="https://kit.fontawesome.com/c2ff013dbc.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <header class="header">
+    <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
+    </header>
+
+    <form action="#" method="POST" class="formulaire">
+    <i class="fas fa-map-marker-alt"></i>
+    <input type="search" disabled name="ville" class="ville" placeholder="Paris, Belleville"/>
+    </form>
+
 
 </body>
 </html>
