--- a/La-note-enchantée.html
+++ b/La-note-enchantée.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="https://kit.fontawesome.com/c2ff013dbc.js" crossorigin="anonymous"></script>
     <title>La note enchantée</title>
 </head>
 <body>
+    <!--Header-->
+    <header class="header">
+    <a href="index.html"><i class="fas fa-arrow-left header__fleche-retour"></i></a>  
+    <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
+    </header>
+
+    <!--Footer-->
+    <footer class="footer">
+    <a href="index.html"><img class="footer__logo" src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood"></a>
+    <div class="liste">
+    <a class="liste__footer" href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+    <a class="liste__footer" href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+    <a class="liste__footer" href="#">Mentions légales</a>
+    <a class="liste__footer" href="mailto:vspc1685@gmail.com">Contact</a>
+    </div>
+    </footer>
     
 </body>
 </html>
