--- a/index.html
+++ b/index.html
@@ -10,15 +10,38 @@
 </head>
 <body>
 
+    <!--Header-->
     <header class="header">
     <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
     </header>
 
+    <!--Recherche-->
     <form action="#" method="POST" class="formulaire">
     <i class="fas fa-map-marker-alt"></i>
     <input type="search" disabled name="ville" class="ville" placeholder="Paris, Belleville"/>
     </form>
 
+    <!--Présentation-->
+    <main class="container">
+    <section class="présentation">
+    <h2 class="présentation__titre">Réservez le menu qui vous convient</h2>
+    <p class="présentation__sous-titre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+    <button href="#" class="btn">Explorer nos restaurants</button>
+    </section>
+
+
+    </main>
+
+    <!--Footer-->
+    <footer class="footer">
+    <a href="index.html"><img class="footer__logo" src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood"></a>
+    <div class="liste">
+    <a class="liste__footer" href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+    <a class="liste__footer" href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+    <a class="liste__footer" href="#">Mentions légales</a>
+    <a class="liste__footer" href="mailto:vspc1685@gmail.com">Contact</a>
+    </div>
+    </footer>
 
 </body>
 </html>
