--- a/index.html
+++ b/index.html
@@ -8,39 +8,56 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://kit.fontawesome.com/c2ff013dbc.js" crossorigin="anonymous"></script>
 </head>
-<body>
 
+<body>
     <!--Header-->
     <header class="header">
-    <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
+        <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
     </header>
 
     <!--Recherche-->
-    <form action="#" method="POST" class="formulaire">
-    <i class="fas fa-map-marker-alt"></i>
-    <input type="search" disabled name="ville" class="ville" placeholder="Paris, Belleville"/>
+    <form action="#" method="post" class="formulaire">
+        <i class="fas fa-map-marker-alt"></i>
+        <input type="search" disabled name="ville" class="ville" placeholder="Paris, Belleville"/>
     </form>
 
-    <!--Présentation-->
     <main class="container">
+    <!--Présentation-->
     <section class="présentation">
-    <h2 class="présentation__titre">Réservez le menu qui vous convient</h2>
-    <p class="présentation__sous-titre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-    <button href="#" class="btn">Explorer nos restaurants</button>
+        <h2 class="présentation__titre">Réservez le menu qui vous convient</h2>
+        <p class="présentation__sous-titre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <button href="#" class="btn">Explorer nos restaurants</button>
     </section>
 
+    <!--Fonctionnement-->
+    <section class="fonctionnement">
+        <h2>Fonctionnement</h2>
+            <div class="fonctionnement__choix">
+                <div class="fonctionnement__étape">
+                    <span>1</span><i class="fas fa-mobile-alt"></i><p>Choisissez un restaurant</p>
+                </div>
 
+                <div class="fonctionnement__étape">
+                    <span>2</span><i class="fas fa-list-ul"></i><p>Composez votre menu</p>
+                </div>
+
+                <div class="fonctionnement__étape">
+                    <span>3</span><i class="fas fa-store"></i><p>Dégustez au restaurant</p>
+                </div>
+            </div>
+    </section>
+    
     </main>
 
     <!--Footer-->
     <footer class="footer">
-    <a href="index.html"><img class="footer__logo" src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood"></a>
-    <div class="liste">
-    <a class="liste__footer" href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-    <a class="liste__footer" href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-    <a class="liste__footer" href="#">Mentions légales</a>
-    <a class="liste__footer" href="mailto:vspc1685@gmail.com">Contact</a>
-    </div>
+        <a href="index.html"><img class="footer__logo" src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood"></a>
+        <div class="liste">
+            <a class="liste__footer" href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+            <a class="liste__footer" href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+            <a class="liste__footer" href="#">Mentions légales</a>
+            <a class="liste__footer" href="mailto:vspc1685@gmail.com">Contact</a>
+        </div>
     </footer>
 
 </body>
