--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="container">
     <!--Présentation-->
     <section class="présentation">
-        <h2 class="présentation__titre">Réservez le menu qui vous convient</h2>
+        <h1 class="présentation__titre">Réservez le menu qui vous convient</h1>
         <p class="présentation__sous-titre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <button href="#" class="btn">Explorer nos restaurants</button>
     </section>
@@ -47,6 +47,57 @@
             </div>
     </section>
     
+    <!--Cartes Restaurents-->
+    <section class="restaurants">
+        <h2>Restaurants</h2>
+            <div class="restaurants__cartes">
+                <a href="La-palette-du-goût.html">
+                    <div class="listes_restaurants">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                        <div class="déscription_restaurants">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                            <i class="far fa-heart"></i>
+                            <h4><small>Nouveau</small></h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="La-note-enchantée.html">
+                    <div class="listes_restaurants">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                        <div class="déscription_restaurants">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                            <i class="far fa-heart"></i>
+                            <h4><small>Nouveau</small></h4>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="À-la-française.html">
+                    <div class="listes_restaurants">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                        <div class="déscription_restaurants">
+                            <h3>À la française</h3>
+                            <p>Cité rouge</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="Le-délice-des-sens.html">
+                    <div class="listes_restaurants">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Une photo d'un plat du restaurant La délice des sens">
+                        <div class="déscription_restaurants">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+    </section>
     </main>
 
     <!--Footer-->
