--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/c2ff013dbc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!--Header-->
     <header class="header">
-        <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
+        <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"></a>
     </header>
 
     <!--Recherche-->
     <form action="#" method="post" class="formulaire">
         <i class="fas fa-map-marker-alt"></i>
-        <input type="search" disabled name="ville" class="ville" placeholder="Paris, Belleville"/>
+        <input type="search" disabled name="ville" class="ville" placeholder="Paris, Belleville">
     </form>
 
     <main class="container">
@@ -26,7 +26,7 @@
     <section class="présentation">
         <h1 class="présentation__titre">Réservez le menu qui vous convient</h1>
         <p class="présentation__sous-titre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <button href="#" class="btn">Explorer nos restaurants</button>
+        <button class="btn">Explorer nos restaurants</button>
     </section>
 
     <!--Fonctionnement-->
@@ -51,51 +51,51 @@
     <section class="restaurants">
         <h2>Restaurants</h2>
             <div class="restaurants__cartes">
+                <div class="listes_restaurants">
                 <a href="La-palette-du-goût.html">
-                    <div class="listes_restaurants">
-                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La plalette">
                         <div class="déscription_restaurants">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                             <i class="far fa-heart"></i>
                             <h4><small>Nouveau</small></h4>
                         </div>
-                    </div>
                 </a>
+                </div>
 
+                <div class="listes_restaurants">
                 <a href="La-note-enchantée.html">
-                    <div class="listes_restaurants">
-                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                         <div class="déscription_restaurants">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                             <i class="far fa-heart"></i>
                             <h4><small>Nouveau</small></h4>
                         </div>
-                    </div>
                 </a>
+                </div>
 
-                <a href="À-la-française.html">
-                    <div class="listes_restaurants">
-                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                <div class="listes_restaurants">
+                <a href="A-la-française.html">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         <div class="déscription_restaurants">
                             <h3>À la française</h3>
                             <p>Cité rouge</p>
                             <i class="far fa-heart"></i>
                         </div>
-                    </div>
                 </a>
+                </div>
 
+                <div class="listes_restaurants">
                 <a href="Le-délice-des-sens.html">
-                    <div class="listes_restaurants">
                         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Une photo d'un plat du restaurant La délice des sens">
                         <div class="déscription_restaurants">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                             <i class="far fa-heart"></i>
                         </div>
-                    </div>
                 </a>
+                </div>
             </div>
     </section>
     </main>
