--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La plalette">
                         <div class="déscription_restaurants">
                             <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                            <i class="far fa-heart"></i>
+                            <p>Ménilmontant</p>        
                             <h4><small>Nouveau</small></h4>
                         </div>
                 </a>
+                <i class="far fa-heart déscription_restaurants__coeur"></i>
                 </div>
 
                 <div class="listes_restaurants">
@@ -69,10 +69,10 @@
                         <div class="déscription_restaurants">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
-                            <i class="far fa-heart"></i>
                             <h4><small>Nouveau</small></h4>
                         </div>
                 </a>
+                <i class="far fa-heart déscription_restaurants__coeur"></i>
                 </div>
 
                 <div class="listes_restaurants">
@@ -81,9 +81,9 @@
                         <div class="déscription_restaurants">
                             <h3>À la française</h3>
                             <p>Cité rouge</p>
-                            <i class="far fa-heart"></i>
                         </div>
                 </a>
+                <i class="far fa-heart déscription_restaurants__coeur"></i>
                 </div>
 
                 <div class="listes_restaurants">
@@ -92,9 +92,9 @@
                         <div class="déscription_restaurants">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
-                            <i class="far fa-heart"></i>
                         </div>
                 </a>
+                <i class="far fa-heart déscription_restaurants__coeur"></i>
                 </div>
             </div>
     </section>
