--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <!--Spinner-->
+    <div class="chargement">
+    <div class="logo_chargement"><img src="images/logo/ohmyfood@2x copie.svg"></div>
+    <div class="rotation color_primaire"></div>
+    <div class="rotation color_secondaire"></div>
+    <div class="rotation color_tertiaire"></div>
+    </div>
+
     <!--Header-->
     <header class="header">
         <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"></a>
@@ -53,7 +61,7 @@
             <div class="restaurants__cartes">
                 <div class="listes_restaurants">
                 <a href="La-palette-du-goût.html">
-                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La plalette">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#">
                         <div class="déscription_restaurants">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>        
@@ -65,7 +73,7 @@
 
                 <div class="listes_restaurants">
                 <a href="La-note-enchantée.html">
-                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="#">
                         <div class="déscription_restaurants">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
@@ -77,7 +85,7 @@
 
                 <div class="listes_restaurants">
                 <a href="A-la-française.html">
-                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="#">
                         <div class="déscription_restaurants">
                             <h3>À la française</h3>
                             <p>Cité rouge</p>
@@ -88,7 +96,7 @@
 
                 <div class="listes_restaurants">
                 <a href="Le-délice-des-sens.html">
-                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Une photo d'un plat du restaurant La délice des sens">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="#">
                         <div class="déscription_restaurants">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
