ajout page restaurant la pallette

--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
 <body>
     <!--Spinner-->
     <div class="chargement">
-    <div class="logo_chargement"><img src="images/logo/ohmyfood@2x copie.svg"></div>
-    <div class="rotation color_primaire"></div>
-    <div class="rotation color_secondaire"></div>
-    <div class="rotation color_tertiaire"></div>
+        <div class="logo_chargement"><img src="images/logo/ohmyfood@2xcopie.svg" alt="#"></div>
+        <div class="rotation color_primaire"></div>
+        <div class="rotation color_secondaire"></div>
+        <div class="rotation color_tertiaire"></div>
     </div>
+    <!--Fin de Spinner-->
 
     <!--Header-->
     <header class="header">
         <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"></a>
     </header>
+    <!--Fin de Header-->
 
     <!--Recherche-->
     <form action="#" method="post" class="formulaire">
         <i class="fas fa-map-marker-alt"></i>
         <input type="search" disabled name="ville" class="ville" placeholder="Paris, Belleville">
     </form>
+    <!--Fin de Recherche-->
 
     <main class="container">
     <!--Présentation-->
@@ -36,6 +39,7 @@
         <p class="présentation__sous-titre">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <button class="btn">Explorer nos restaurants</button>
     </section>
+    <!--Fin de Présentation-->
 
     <!--Fonctionnement-->
     <section class="fonctionnement">
@@ -54,6 +58,7 @@
                 </div>
             </div>
     </section>
+    <!--Fin de Fonctionnement-->
     
     <!--Cartes Restaurents-->
     <section class="restaurants">
@@ -106,6 +111,7 @@
                 </div>
             </div>
     </section>
+    <!--Fin de Cartes Restaurents-->
     </main>
 
     <!--Footer-->
@@ -118,6 +124,7 @@
             <a class="liste__footer" href="mailto:vspc1685@gmail.com">Contact</a>
         </div>
     </footer>
+    <!--Fin de Footer-->
 
 </body>
 </html>
