--- a/La-palette-du-goût.html
+++ b/La-palette-du-goût.html
@@ -4,16 +4,158 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/c2ff013dbc.js" crossorigin="anonymous"></script>
-    <title>La palette du goût</title>
+    <title>La palette du gout</title>
 </head>
 <body>
 <!--Header-->
 <header class="header">
     <a href="index.html"><i class="fas fa-arrow-left header__fleche-retour"></i></a>  
-    <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
+    <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"></a>
 </header>
+<main>
+  <img class="image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#">
+  <div class="restaurant">
+      <div class="restaurant__titre">
+        <h5>La palette du goût</h5>
+        <div><i class="far fa-heart coeur"></i></div>
+      </div>
+
+    <div class="catégorie">
+      <div class="column">
+        <h3>ENTRÉES</h3>
+        <div class="menu animation_1">
+            <div class="menu__listes">
+              <h4 class="menu__nom">Fricassée d'escargot</h4>
+              <p class="menu__déscription">Au piment d'Espelette</p>
+            </div>
+            <div class="slide">
+              <span class="slide__prix">25€</span>
+              <div class="slide__check-circle">
+                <i class="fas fa-check-circle"></i>
+              </div>
+            </div>
+        </div>
+
+        <div class="menu animation_1">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Foie gras de canard mi-cuit</h4>
+            <p class="menu__déscription">Et ses copeaux de truffe noire</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">35€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu animation_1">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Oeuf au plat</h4>
+            <p class="menu__déscription">Assaisonné à la truffe sur lit de caviar</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">20€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <h3>PLATS</h3>
+        <div class="menu animation_2">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Filet de boeuf aux herbes</h4>
+            <p class="menu__déscription">Accompagné de sa ribambelle de légumes</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">40€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu animation_2">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Parmentier de queue de boeuf</h4>
+            <p class="menu__déscription">À la truffe noire sur sa purée de panais</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">35€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu animation_2">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Filet de turbot</h4>
+            <p class="menu__déscription">Aux agrumes</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">44€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+      </div> 
+
+      <div class="column">
+        <h3>DESSERTS</h3>
+        <div class="menu animation_3">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Paris-Brest</h4>
+            <p class="menu__déscription">Revisité</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">18€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu animation_3">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Macaron au chocolat d'exception</h4>
+            <p class="menu__déscription">Et glace à la vanille de Madagascar</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">22€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu animation_3">
+          <div class="menu__listes">
+            <h4 class="menu__nom">Mousse au chocolat</h4>
+            <p class="menu__déscription">Au piment d'Espelette et à la truffe noire</p>
+          </div>
+          <div class="slide">
+            <span class="slide__prix">23€</span>
+            <div class="slide__check-circle">
+              <i class="fas fa-check-circle"></i>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+    <div class="commande">
+      <button class="btn">Commander</button>
+    </div>
+
+  </div>
+</main>
 
 <!--Footer-->
 <footer class="footer">
