ajout d'animation dans la page de  menu

--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/c2ff013dbc.js" crossorigin="anonymous"></script>
-    <title>Le délice des sens</title>
+    <title>Le delice des sens</title>
 </head>
 <body>
     <!--Header-->
     <header class="header">
         <a href="index.html"><i class="fas fa-arrow-left header__fleche-retour"></i></a>  
-        <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/></a>
+        <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"></a>
     </header>
 
     <main>
