--- a/La-palette-du-goût.html
+++ b/La-palette-du-goût.html
@@ -14,18 +14,31 @@
     <a href="index.html"><i class="fas fa-arrow-left header__fleche-retour"></i></a>  
     <a href="index.html"><img class="header__logo" src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"></a>
 </header>
+<!--Fin de Header-->
+
+<!--Main-->
 <main>
+  <!--Image Restaurant-->
   <img class="image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="#">
-  <div class="restaurant">
+  <!--Fin d'Image Restaurant-->
+
+  <!--Section Restaurant-->
+  <section class="restaurant">
+
+    <!--Titre et Coeur Restaurant-->
       <div class="restaurant__titre">
         <h5>La palette du goût</h5>
         <div><i class="far fa-heart coeur"></i></div>
       </div>
+    <!--Fin de Titre et Coeur Restaurant-->
 
-    <div class="catégorie">
+    <!--Section Catégorie-->
+    <section class="catégorie">
+
+      <!--Entrées-->
       <div class="column">
         <h3>ENTRÉES</h3>
-        <div class="menu animation_1">
+        <article class="menu animation_1">
             <div class="menu__listes">
               <h4 class="menu__nom">Fricassée d'escargot</h4>
               <p class="menu__déscription">Au piment d'Espelette</p>
@@ -36,9 +49,9 @@
                 <i class="fas fa-check-circle"></i>
               </div>
             </div>
-        </div>
+        </article>
 
-        <div class="menu animation_1">
+        <article class="menu animation_1">
           <div class="menu__listes">
             <h4 class="menu__nom">Foie gras de canard mi-cuit</h4>
             <p class="menu__déscription">Et ses copeaux de truffe noire</p>
@@ -49,9 +62,9 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
+        </article>
 
-        <div class="menu animation_1">
+        <article class="menu animation_1">
           <div class="menu__listes">
             <h4 class="menu__nom">Oeuf au plat</h4>
             <p class="menu__déscription">Assaisonné à la truffe sur lit de caviar</p>
@@ -62,12 +75,14 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
+        </article>
       </div>
+      <!--Fin d'Entrées-->
 
+      <!--Plats-->
       <div class="column">
         <h3>PLATS</h3>
-        <div class="menu animation_2">
+        <article class="menu animation_2">
           <div class="menu__listes">
             <h4 class="menu__nom">Filet de boeuf aux herbes</h4>
             <p class="menu__déscription">Accompagné de sa ribambelle de légumes</p>
@@ -78,9 +93,9 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
+        </article>
 
-        <div class="menu animation_2">
+        <article class="menu animation_2">
           <div class="menu__listes">
             <h4 class="menu__nom">Parmentier de queue de boeuf</h4>
             <p class="menu__déscription">À la truffe noire sur sa purée de panais</p>
@@ -91,9 +106,9 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
+        </article>
 
-        <div class="menu animation_2">
+        <article class="menu animation_2">
           <div class="menu__listes">
             <h4 class="menu__nom">Filet de turbot</h4>
             <p class="menu__déscription">Aux agrumes</p>
@@ -104,12 +119,14 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
-      </div> 
+        </article>
+      </div>
+      <!--Fin de Plats-->
 
+      <!--Desserts-->
       <div class="column">
         <h3>DESSERTS</h3>
-        <div class="menu animation_3">
+        <article class="menu animation_3">
           <div class="menu__listes">
             <h4 class="menu__nom">Paris-Brest</h4>
             <p class="menu__déscription">Revisité</p>
@@ -120,9 +137,9 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
+        </article>
 
-        <div class="menu animation_3">
+        <article class="menu animation_3">
           <div class="menu__listes">
             <h4 class="menu__nom">Macaron au chocolat d'exception</h4>
             <p class="menu__déscription">Et glace à la vanille de Madagascar</p>
@@ -133,9 +150,9 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
+        </article>
 
-        <div class="menu animation_3">
+        <article class="menu animation_3">
           <div class="menu__listes">
             <h4 class="menu__nom">Mousse au chocolat</h4>
             <p class="menu__déscription">Au piment d'Espelette et à la truffe noire</p>
@@ -146,16 +163,23 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-        </div>
+        </article>
     </div>
-  </div>
+    <!--Fin de Desserts-->
+  </section>
+<!--Fin de Section Catégorie-->
 
+ <!--Button Commande-->
     <div class="commande">
       <button class="btn">Commander</button>
     </div>
+ <!--Fin de Button Commande-->
 
-  </div>
+  </section>
+  <!--Fin de Section Restaurant-->
+  
 </main>
+<!--Fin de Main-->
 
 <!--Footer-->
 <footer class="footer">
@@ -167,6 +191,7 @@
         <a class="liste__footer" href="mailto:vspc1685@gmail.com">Contact</a>
     </div>
 </footer>
+<!--Fin de Footer-->
 
 </body>
 </html>
