--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </form>
     <!--Fin de Recherche-->
 
+    <!--Main-->
     <main class="container">
     <!--Présentation-->
     <section class="présentation">
@@ -113,6 +114,7 @@
     </section>
     <!--Fin de Cartes Restaurents-->
     </main>
+    <!--Fin de Main-->
 
     <!--Footer-->
     <footer class="footer">
